# VineGuard-Prototype

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  simulate_node.py
backend/: README.md  pyproject.toml
backend/src/vineguard_backend/: config.py  db.py  models.py
backend/src/vineguard_backend/analytics/: rules.py
backend/src/vineguard_backend/auth/: deps.py  security.py
backend/src/vineguard_backend/schemas/: auth.py  telemetry.py
backend/src/vineguard_backend/scripts/: fake_telemetry.py  seed_demo.py
backend/src/vineguard_backend/services/: api.py  telemetry_ingest.py
cloud/: .env.example
cloud/docs/: auth.http  nodes.http
cloud/infrastructure/: Dockerfile.analytics  Dockerfile.api  Dockerfile.ingestor  Dockerfile.simulator  README.md  docker-compose.yml
cloud/infrastructure/mosquitto/: README.md  mosquitto.conf
cloud/infrastructure/sql/: init_timescaledb.sql  repair_missing_tables.sql
cloud/services/analytics/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
cloud/services/analytics/analytics/: __init__.py  alert_manager.py  config.py  main.py  models.py
cloud/services/analytics/analytics/rules/: __init__.py  canopy_lux.py  frost.py  gdd.py  mildew_mpi.py  moisture.py
cloud/services/analytics/tests/: test_rules.py
cloud/services/api/: .env  .env.example  README.md  pyproject.toml  requirements.txt  setup.cfg
cloud/services/api/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  logging.py  main.py  models.py  schemas.py
cloud/services/api/app/api/: routes.py
cloud/services/api/app/api/v1/: alerts.py  auth.py  blocks.py  dashboard.py  nodes.py  recommendations.py  vineyards.py
cloud/services/api/app/core/: config.py  deps.py  security.py
cloud/services/api/app/routers/: __init__.py  auth.py  commands.py  insights.py  live.py  nodes.py
cloud/services/api/app/schemas/: auth.py  commands.py  nodes.py
cloud/services/api/tests/: test_api.py  test_health.py
cloud/services/ingestor/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
cloud/services/ingestor/ingestor/: __init__.py  config.py  main.py  models.py  schemas.py
cloud/services/ingestor/tests/: test_ingestor.py
cloud/services/seed/: .env  main.py  requirements.txt
dashboard/: .eslintrc.cjs  README.md  index.html  package.json  tsconfig.json
dashboard/src/: App.tsx  main.tsx  styles.css
dashboard/src/components/: LoginForm.tsx
dashboard/src/hooks/: useAuth.tsx
dashboard/src/pages/: Dashboard.tsx  Login.tsx
dashboard/src/types/: index.ts
docker/: Dockerfile
docs/: ADR-001-foundation.md  ASSUMPTIONS.md  DEMO_RUNBOOK.md  FIELD_INSTALL_CHECKLIST.md  GATEWAY_INTEGRATION.md  NODE_ARCHITECTURE.md  NODE_WIRING.md  OTA_STRATEGY.md  PAYLOAD_CONTRACT.md  PROVISIONING.md  README.md  api.http  data-model.md  vineguard.postman_collection.json
edge/gateway/: .env.example  README.md  __main__.py  config.py  gateway.py  health.py  logging_config.py  mqtt_client.py  pyproject.toml  queue_store.py  setup.cfg  telemetry_validator.py
edge/gateway/sources/: base.py  lora.py  udp.py
edge/gateway/src/vineguard_gateway/: __init__.py  config.py  decoder.py  lora.py  main.py  mqtt_client.py
edge/gateway/tests/: test_cache.py  test_decoder.py  test_gateway.py  test_lora_decoder.py  test_publish.py
edge/gateway/tests/fixtures/: basic_healthy.json  compact_json_lora_p2p.json  dry_down_low_moisture.json  low_battery.json  malformed_payload.json  missing_bme280.json  precision_plus_mildew_risk.json
firmware/esp32-node/: README.md  config.h.example  platformio.ini
firmware/esp32-node/include/: CommManager.h  NodeConfig.h  SensorInterfaces.h  StatusLed.h  build_config.h  calibration.example.h  config.h  config_defaults.h  lorawan_keys.example.h  payload_schema.h  pins.h
firmware/esp32-node/src/: CommManager.cpp  NodeConfig.cpp  SensorInterfaces.cpp  StatusLed.cpp  main.cpp
firmware/esp32-node/test/: test_payload_codec.cpp  test_sensor_calibration.cpp  test_telemetry_builder.cpp
firmware/esp32-node/tools/: decode_payload.py  flash_device.ps1  flash_device.sh  make_keys_header.py  serial_smoke_test.py  (+1 more)
tools/: run_demo.sh  run_node_gateway_smoke.sh  seed_demo.py
tools/simulator/: simulator.py
web/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
web/src/: App.tsx  index.css
(+87 files in other folders)
