[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vineguard-cloud-api"
version = "0.1.0"
description = "VineGuard cloud API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.12",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "sse-starlette>=1.6",
    "python-dotenv>=1.0",
    "structlog>=24.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.26"]

[project.scripts]
vineguard-api = "app.main:run"
