[metadata]
name = vineguard-ingestor
version = 0.1.0

[options]
packages = find:
package_dir =
    =.
install_requires =
    asyncio-mqtt>=0.16
    pydantic>=2.5
    pydantic-settings>=2.0
    sqlalchemy[asyncio]>=2.0
    asyncpg>=0.29
    redis>=5.0
    structlog>=24.1
    orjson>=3.9

[options.packages.find]
where = .
